--- a/src/app/components/administradora/administradora.component.html
+++ b/src/app/components/administradora/administradora.component.html
@@ -56,7 +56,7 @@
           <a *ngIf="editandoAdministradora()" (click)="atualizarAdministradora()">
             <mat-icon class="mouse-pointer">save</mat-icon>
           </a>
-          <a *ngIf="adicionandoAdministradora()" (click)="cancelarAdicao()">
+          <a *ngIf="adicionandoAdministradora() || (!editandoAdministradora() && !adicionandoAdministradora())" (click)="cancelarAdicao()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
           <a *ngIf="editandoAdministradora()" (click)="cancelarEdicao()">
