--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -220,7 +220,7 @@
           <a *ngIf="!editandoTabela() && !adicionandoTabela()" (click)="editarTabela()">
             <mat-icon class="mouse-pointer">create</mat-icon>
           </a>
-          <a *ngIf="!editandoTabela() && !adicionandoTabela()" (click)="copiarTabela()">
+          <a *ngIf="!adicionandoTabela()" (click)="copiarTabela()">
             <mat-icon class="mouse-pointer">content_copy</mat-icon>
           </a>
           <a *ngIf="!editandoTabela() && !adicionandoTabela()" (click)="removerTabela()">
@@ -232,7 +232,7 @@
           <a *ngIf="editandoTabela()" (click)="atualizarTabela()">
             <mat-icon class="mouse-pointer">save</mat-icon>
           </a>
-          <a *ngIf="adicionandoTabela()" (click)="cancelarAdicao()">
+          <a *ngIf="adicionandoTabela() || (!editandoTabela() && !adicionandoTabela())" (click)="cancelarAdicao()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
           <a *ngIf="editandoTabela()" (click)="cancelarEdicao()">
