ao editar Opção: se selecionar Empresarial, nao precisa do filtro ContemplaMEI

--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -347,7 +347,7 @@
                     </mat-radio-group>
                   </div>
 
-                  <div *ngIf="isCategoriaEmpresarial()" style="width: 40%; text-align: right">
+                  <div *ngIf="isCategoriaEmpresarial() && false" style="width: 40%; text-align: right">
                     <mat-slide-toggle name="mei" (ngModelChange)="modelChangeMEI($event)" [(ngModel)]="opcaoEditando.mei" [disabled]="(!adicionandoOpcao() && !editandoOpcao()) || !operadoraAutoCompleteControl.value?.id" labelPosition="before">Contempla MEI</mat-slide-toggle>
                   </div>
                 </div>
